--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -18,8 +18,8 @@
         app:srcCompat="@drawable/img_registrar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="650sp"
+        android:layout_width="414dp"
+        android:layout_height="524dp"
         android:background="@drawable/text_bord"
         android:elevation="30dp"
         android:padding="32sp"
@@ -46,22 +46,22 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/contraseniaR2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="267dp"
+            android:layout_height="54dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="50dp"
             app:endIconMode="password_toggle"
-            app:passwordToggleDrawable="@android:drawable/ic_menu_view"
-            app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/apellidoR">
+            app:layout_constraintTop_toBottomOf="@+id/apellidoR"
+            app:passwordToggleDrawable="@android:drawable/ic_menu_view"
+            app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/contraseniaR"
-                android:layout_width="233dp"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="51dp"
                 android:ems="10"
                 android:fontFamily="@font/quicksand_bold"
                 android:hint="Contraseña"
@@ -82,8 +82,8 @@
             android:layout_marginEnd="50dp"
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
-            android:inputType="textPersonName"
             android:hint="Nombre"
+            android:inputType="textPersonName"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,8 +99,8 @@
             android:layout_marginEnd="50dp"
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
-            android:inputType="textPersonName"
             android:hint="Apellido"
+            android:inputType="textPersonName"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -116,8 +116,8 @@
             android:layout_marginEnd="50dp"
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
-            android:inputType="textEmailAddress"
             android:hint="Correo"
+            android:inputType="textEmailAddress"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
@@ -129,16 +129,17 @@
             android:layout_width="210dp"
             android:layout_height="55dp"
             android:layout_marginStart="80dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="79dp"
             android:background="@drawable/button_border"
             android:backgroundTint="#299916"
+            android:elevation="30dp"
             android:fontFamily="@font/quicksand_bold"
             android:text="Registrar"
-            android:elevation="30dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contraseniaR2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
