--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,19 +10,20 @@
 
     <ImageView
         android:id="@+id/imageView17"
-        android:layout_width="353dp"
-        android:layout_height="316dp"
+        android:layout_width="338dp"
+        android:layout_height="193dp"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="29dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.349"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/img_login" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_width="387dp"
+        android:layout_height="534dp"
         android:background="@drawable/text_bord"
         android:elevation="30dp"
         android:orientation="vertical"
@@ -52,8 +53,8 @@
             android:layout_marginEnd="40dp"
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
-            android:inputType="textEmailAddress"
             android:hint="Correo"
+            android:inputType="textEmailAddress"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black" />
 
@@ -66,22 +67,22 @@
             android:layout_marginEnd="40dp"
             android:ems="10"
             android:fontFamily="@font/quicksand_bold"
-            android:inputType="textPassword"
             android:hint="Contraseña"
+            android:inputType="textPassword"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@color/black" />
 
         <Button
             android:id="@+id/btnIngresar"
-            android:layout_width="210dp"
+            android:layout_width="240dp"
             android:layout_height="55dp"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="68dp"
             android:layout_marginEnd="151dp"
             android:background="@drawable/button_border"
             android:backgroundTint="@color/colorverde"
-            android:fontFamily="@font/quicksand_bold"
             android:elevation="30dp"
+            android:fontFamily="@font/quicksand_bold"
             android:text="Acceder"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="#FFFFFF" />
