--- a/app/src/main/res/layout/encuesta.xml
+++ b/app/src/main/res/layout/encuesta.xml
@@ -115,7 +115,7 @@
                             android:ems="10"
                             android:hint="Teléfono"
                             android:maxLength="10"
-                            android:inputType="phone"
+                            android:inputType="number"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
 
