--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:backgroundTint="@color/verde4"
-    android:foregroundTint="@color/verde4"
-    android:background="#FFFFFF">
+    android:foregroundTint="@color/verde4">
 
     <RelativeLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="408dp"
-        android:layout_height="463dp"
+        android:layout_width="410dp"
+        android:layout_height="469dp"
         android:background="@drawable/text_bord_inicio"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -20,26 +20,26 @@
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="238dp"
-            android:layout_height="246dp"
+            android:layout_width="276dp"
+            android:layout_height="259dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="94dp"
-            android:layout_marginEnd="76dp"
-            android:layout_marginBottom="152dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginEnd="58dp"
+            android:layout_marginBottom="146dp"
             app:srcCompat="@drawable/img_inicio" />
 
         <TextView
             android:id="@+id/textView14"
-            android:layout_width="240dp"
-            android:layout_height="76dp"
+            android:layout_width="233dp"
+            android:layout_height="75dp"
             android:layout_alignBottom="@+id/imageView7"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="99dp"
-            android:layout_marginEnd="50dp"
-            android:layout_marginBottom="-53dp"
+            android:layout_marginEnd="78dp"
+            android:layout_marginBottom="-51dp"
             android:fontFamily="@font/quicksand_bold"
             android:text="SE SURVEY"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -51,41 +51,36 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="343dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="270dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="71dp"
         android:background="@drawable/button_border"
         android:backgroundTint="@color/colorverde"
         android:fontFamily="@font/quicksand_bold"
         android:text="Iniciar sesión"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@id/btnRegistro"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.282"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
-        app:layout_constraintVertical_bias="0.793" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <Button
         android:id="@+id/btnRegistro"
-        android:layout_width="356dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="263dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="269dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="26dp"
+        android:layout_marginEnd="71dp"
         android:background="@drawable/button_border"
         android:backgroundTint="@color/black"
         android:fontFamily="@font/quicksand_bold"
         android:text="Crear cuenta"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.044" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
