--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -11,7 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="350sp"
+        android:layout_height="300sp"
         android:background="@drawable/text_bord_perfil"
         android:elevation="30dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,8 +48,7 @@
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="347dp"
-        android:layout_height="408dp"
-        android:layout_marginTop="0dp"
+        android:layout_height="375dp"
         android:background="@drawable/text_bord_cont_perfil"
         android:elevation="30dp"
         android:orientation="vertical"
@@ -62,6 +61,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="309dp"
             android:layout_height="162dp"
+            android:layout_marginBottom="17dp"
             android:background="@drawable/text_bord_cont_cont">
 
             <TextView
@@ -209,7 +209,7 @@
         android:layout_width="349dp"
         android:layout_height="65dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/button_border"
         android:backgroundTint="@color/verde4"
@@ -219,6 +219,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
