--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -8,140 +8,147 @@
     android:backgroundTint="@color/verde4"
     tools:context=".RegistrarUsuario">
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="413dp"
-        android:layout_height="261dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/img_registrar" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="414dp"
-        android:layout_height="524dp"
-        android:background="@drawable/text_bord"
-        android:elevation="30dp"
-        android:padding="32sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="70dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="70dp"
-            android:backgroundTint="#299916"
-            android:fontFamily="@font/quicksand_bold"
-            android:text="Crear Cuenta"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textColor="@color/colorverde"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical" >
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/contraseniaR2"
-            android:layout_width="267dp"
-            android:layout_height="54dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="50dp"
-            app:endIconMode="password_toggle"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/apellidoR"
-            app:passwordToggleDrawable="@android:drawable/ic_menu_view"
-            app:passwordToggleEnabled="true">
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="423dp"
+                android:layout_height="232dp"
+                app:srcCompat="@drawable/img_registrar" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/contraseniaR"
-                android:layout_width="match_parent"
-                android:layout_height="51dp"
-                android:ems="10"
-                android:fontFamily="@font/quicksand_bold"
-                android:hint="Contraseña"
-                android:inputType="textPassword"
-                android:text=""
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@+id/apellidoR" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="413dp"
+                android:layout_height="770dp"
+                android:background="@drawable/text_bord"
+                android:elevation="30dp"
+                android:padding="32sp">
 
-        <EditText
-            android:id="@+id/nombreR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="50dp"
-            android:ems="10"
-            android:fontFamily="@font/quicksand_bold"
-            android:hint="Nombre"
-            android:inputType="textPersonName"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/usuarioR" />
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="70dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="70dp"
+                    android:backgroundTint="#299916"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:text="Crear Cuenta"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textColor="@color/colorverde"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/apellidoR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="50dp"
-            android:ems="10"
-            android:fontFamily="@font/quicksand_bold"
-            android:hint="Apellido"
-            android:inputType="textPersonName"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nombreR" />
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/contraseniaR2"
+                    android:layout_width="278dp"
+                    android:layout_height="62dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="50dp"
+                    app:endIconMode="password_toggle"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/apellidoR"
+                    app:passwordToggleDrawable="@android:drawable/ic_menu_view"
+                    app:passwordToggleEnabled="true">
 
-        <EditText
-            android:id="@+id/usuarioR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="50dp"
-            android:ems="10"
-            android:fontFamily="@font/quicksand_bold"
-            android:hint="Correo"
-            android:inputType="textEmailAddress"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/contraseniaR"
+                        android:layout_width="281dp"
+                        android:layout_height="51dp"
+                        android:ems="10"
+                        android:fontFamily="@font/quicksand_bold"
+                        android:hint="Contraseña"
+                        android:inputType="textPassword"
+                        android:text=""
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        app:layout_constraintTop_toBottomOf="@+id/apellidoR" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/btnRegistrar"
-            android:layout_width="210dp"
-            android:layout_height="55dp"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="79dp"
-            android:background="@drawable/button_border"
-            android:backgroundTint="#299916"
-            android:elevation="30dp"
-            android:fontFamily="@font/quicksand_bold"
-            android:text="Registrar"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="#FFFFFF"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contraseniaR2" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <EditText
+                    android:id="@+id/nombreR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="50dp"
+                    android:ems="10"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:hint="Nombre"
+                    android:inputType="textPersonName"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/usuarioR" />
+
+                <EditText
+                    android:id="@+id/apellidoR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="50dp"
+                    android:ems="10"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:hint="Apellido"
+                    android:inputType="textPersonName"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/nombreR" />
+
+                <EditText
+                    android:id="@+id/usuarioR"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="50dp"
+                    android:ems="10"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:hint="Correo"
+                    android:inputType="textEmailAddress"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+                <Button
+                    android:id="@+id/btnRegistrar"
+                    android:layout_width="210dp"
+                    android:layout_height="55dp"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="79dp"
+                    android:background="@drawable/button_border"
+                    android:backgroundTint="#299916"
+                    android:elevation="30dp"
+                    android:fontFamily="@font/quicksand_bold"
+                    android:text="Registrar"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="#FFFFFF"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/contraseniaR2" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
