--- a/app/src/main/res/layout/registrar_usuario.xml
+++ b/app/src/main/res/layout/registrar_usuario.xml
@@ -35,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="70dp"
                     android:layout_marginTop="50dp"
@@ -51,7 +51,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/contraseniaR2"
-                    android:layout_width="278dp"
+                    android:layout_width="300dp"
                     android:layout_height="62dp"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15dp"
@@ -65,8 +65,8 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/contraseniaR"
-                        android:layout_width="281dp"
-                        android:layout_height="51dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:ems="10"
                         android:fontFamily="@font/quicksand_bold"
                         android:hint="Contraseña"
@@ -80,7 +80,7 @@
 
                 <EditText
                     android:id="@+id/nombreR"
-                    android:layout_width="wrap_content"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15dp"
@@ -97,7 +97,7 @@
 
                 <EditText
                     android:id="@+id/apellidoR"
-                    android:layout_width="wrap_content"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
                     android:layout_marginTop="15dp"
@@ -114,10 +114,10 @@
 
                 <EditText
                     android:id="@+id/usuarioR"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="300dp"
+                    android:layout_height="51dp"
                     android:layout_marginStart="50dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="12dp"
                     android:layout_marginEnd="50dp"
                     android:ems="10"
                     android:fontFamily="@font/quicksand_bold"
