--- a/app/src/main/res/layout/encuesta.xml
+++ b/app/src/main/res/layout/encuesta.xml
@@ -5,13 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#F1F3F1"
-    tools:context=".Encuesta">
+    tools:context=".Encuesta"
+    >
 
     <ScrollView
+        android:id="@+id/scrollT"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
+        tools:layout_editor_absoluteY="0dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
