--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -41,11 +41,11 @@
 
                 <TextView
                     android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/quicksand_bold"
                     android:layout_marginStart="73dp"
                     android:layout_marginEnd="40dp"
+                    android:fontFamily="@font/quicksand_bold"
                     android:text="Comencemos!"
                     android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                     android:textColor="@color/colorverde"
