--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -48,12 +48,13 @@
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="243dp"
+            android:layout_height="65dp"
             android:layout_marginStart="98dp"
             android:layout_marginEnd="98dp"
-            android:text="Datos para tu seguridad"
+            android:text="Proyecto de Vinculación: Director. Ing Luis Castillo"
             android:textColor="@color/black"
+            android:gravity="center"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
