--- a/app/src/main/res/layout/informacion.xml
+++ b/app/src/main/res/layout/informacion.xml
@@ -57,12 +57,12 @@
                     android:layout_width="329dp"
                     android:layout_height="552dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
                     android:justificationMode="inter_word"
                     android:lineSpacingMultiplier="1.2"
                     android:padding="10sp"
-                    android:text="SE Survey es una aplicación diseñada para recopilar información de la comunidad de Luz de América sobre temas relacionados con la gestión de emergencias comunitarias.  A través de una encuesta cuidadosamente diseñada, recopilamos datos sobre robos, accidentes de tránsito, actividades sospechosas u otros servicios de emergencia. Con los resultados obtenidos, podemos analizar las necesidades de la comunidad y desarrollar herramientas que ayuden a mejorar la seguridad y el bienestar de la comunidad. Además, estamos comprometidos en utilizar los resultados de la encuesta para crear una aplicación móvil llamada Seguridad Espe (SE)."
+                    android:text="SE Survey es una aplicación diseñada para recopilar información de la comunidad de Luz de América sobre temas relacionados con la gestión de emergencias comunitarias.  A través de una encuesta cuidadosamente diseñada, recopilamos datos sobre robos, accidentes de tránsito, actividades sospechosas u otros servicios de emergencia. Con los resultados obtenidos, podemos analizar las necesidades de la comunidad y desarrollar herramientas que ayuden a mejorar la seguridad y el bienestar de la comunidad. Además, estamos comprometidos en utilizar los resultados de la encuesta para crear una aplicación móvil llamada Seguridad Espe."
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="normal"
