--- a/app/src/main/res/layout/menu_app.xml
+++ b/app/src/main/res/layout/menu_app.xml
@@ -52,9 +52,9 @@
             android:layout_height="65dp"
             android:layout_marginStart="98dp"
             android:layout_marginEnd="98dp"
-            android:text="Proyecto de Vinculación: Director. Ing Luis Castillo"
-            android:textColor="@color/black"
             android:gravity="center"
+            android:text="Proyecto de Vinculación: Director. Ing. Luis Castillo. "
+            android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
