--- a/app/src/main/res/layout/encuesta.xml
+++ b/app/src/main/res/layout/encuesta.xml
@@ -130,6 +130,7 @@
                             android:textColor="@color/black"
                             android:textSize="20sp" />
 
+                        <!--
                         <EditText
                             android:id="@+id/editTextTextPersonName2"
                             android:layout_width="match_parent"
@@ -140,6 +141,33 @@
                             android:inputType="textPersonName"
                             android:textColor="@color/black"
                             android:textSize="20sp" />
+
+                            -->
+
+                        <TextView
+                            android:id="@+id/txtDir"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="start"
+                            android:padding="10sp"
+                            android:text="* Seleccione una dirección"
+                            android:textSize="19sp" />
+
+                        <Spinner
+                            android:id="@+id/direccion_spinner"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10sp"
+                            android:ems="10"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginEnd="15dp"
+                            android:padding="5dp"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:spinnerMode="dialog"
+                            />
+
 
                         <EditText
                             android:id="@+id/editTextDate"
@@ -561,7 +589,7 @@
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <!-- Para no
+                    <!-- Para no  -->
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/pNPregunta1"
@@ -600,7 +628,7 @@
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
- -->
+
                     <View
                         android:id="@+id/view9"
                         android:layout_width="match_parent"
